--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,10 @@
-<div>
+<form>
+  <div>
+    <label for="login-username">Username</label>
+    <input id="login-username" type="text" [(ngModel)]="username" name="username">
+    <label for="login-password">Password</label>
+    <input id="login-password" type="password" [(ngModel)]="password" name="password">
 
-</div>
+    <button class="btn btn-primary" (click)="login()">Login</button>
+  </div> 
+</form>
