first navbar commit

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,3 +1,11 @@
-<p>
+<nav>
+  <ul id="class-options">
+    <li routerLink="/main/user-projects">View Projects</li>
+    <li routerLink="/main/new-project">Create Project</li>
+    <li routerLink="/main/view-invitations">Invitations</li>
+    <li id="log-out-button" (click)="logout()">Log out</li>
+  </ul>
+</nav>
+<ul<p>
   main works!
 </p>
