Login/Signup button disabling
Added functionality to disable the login/signup buttons unless the entered input is correct.

At this point "correct" means not null or empty.

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,6 +6,6 @@
     <label for="login-password">Password</label>
     <input id="login-password" type="password" [(ngModel)]="password" name="password">
 
-    <button class="btn btn-primary" (click)="login()">Login</button>
+    <button class="btn btn-primary" (click)="login()" [disabled]="!checkInput()">Login</button>
   </div> 
 </form>
