full stack written, debugging

--- a/src/app/components/new-project/new-project.component.html
+++ b/src/app/components/new-project/new-project.component.html
@@ -1,7 +1,7 @@
 <div class="input-form">
-  <title for="projectName">Project Name</title>
+  <label for="projectName">Project Name</label>
   <input id="projectName" type="text" [(ngModel)]="projectName">
-  <title for="description">Description</title>
+  <label for="description">Description</label>
   <input id="description" type="text" [(ngModel)]="description">
   <button (click)="newProject()">Create!</button>
 </div>
