project creation works

--- a/src/app/components/new-project/new-project.component.html
+++ b/src/app/components/new-project/new-project.component.html
@@ -1,4 +1,5 @@
 <div class="input-form">
+  <h2 *ngIf="creationFailure" class="error-message">Project creation failed</h2>
   <label for="projectName">Project Name</label>
   <input id="projectName" type="text" [(ngModel)]="projectName">
   <label for="description">Description</label>
