Can navigate to Project View
Route: /main/project/:id

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -9,7 +9,7 @@
 <ul class="sidebar">
   <li class="sidebar-header">Active Projects</li>
   <ul class="sidebar-list-wrapper">
-    <li class="sidebar-item" *ngFor="let item of projects" (click)="projectLink(item.id)">{{item.title}}</li>
+    <li class="sidebar-item" *ngFor="let item of projects()" (click)="navToProject(item.projectID)">{{item.projectName}}</li>
   </ul>
 </ul>
 <router-outlet></router-outlet>
