Project stories are fetched and displayed in Story Cards
Fixed bug where project stories were being fetched multiple times.
  > This was because the http call was inside of a loop.

Called filter stories by status and define which statuses will
be displayed on the basic project view (Excludes PENDING and
COMPLETED in order to save screen real estate).

--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -9,5 +9,11 @@
 
 
 
-
+<div>
+    <div>
+        <div *ngFor='let status of statusesToDisplay'>
+            <app-story-list [stories]="filteredProjectStories[status]"></app-story-list>
+        </div>
+    </div>
+</div>
 
