--- a/src/app/components/story-list/story-list.component.html
+++ b/src/app/components/story-list/story-list.component.html
@@ -1,4 +1,4 @@
-<div>
+<div id="story-list">
   <div *ngFor="let story of stories">
     <app-story-card [story]="story"></app-story-card>
   </div>
