--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,11 +1,13 @@
 <h2>Login</h2>
+
 <form>
-  <div>
+  <div class="form-group">
     <label for="login-username">Username</label>
     <input id="login-username" type="text" [(ngModel)]="username" name="username">
+  </div>
+  <div class="form-group">
     <label for="login-password">Password</label>
     <input id="login-password" type="password" [(ngModel)]="password" name="password">
-
-    <button class="btn btn-primary" (click)="login()" [disabled]="!checkInput()">Login</button>
-  </div> 
+  </div>
+  <button class="btn btn-primary" (click)="login()" [disabled]="!checkInput()">Login</button>
 </form>
