--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -9,9 +9,9 @@
 
 <button (click)="navToProjectNewStory()">New Story</button>
 
-<div>
-    <div>
-        <div *ngFor='let status of statusesToDisplay'>
+<div class="container">
+    <div class="row">
+        <div class="col" *ngFor='let status of statusesToDisplay'>
             <app-story-list [stories]="filteredProjectStories()[status]"></app-story-list>
         </div>
     </div>
