--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,18 +1,27 @@
 <h2>Signup</h2>
+
 <form>
-    <div>
-      <label for="signup-username">Username</label>
-      <input id="signup-username" type="text" [(ngModel)]="username" name="username">
-      <label for="signup-password">Password</label>
-      <input id="signup-password" type="password" [(ngModel)]="password" name="password">
-      <label for="signup-password-verify">Re-enter Password</label>
-      <input id="signup-password-verify" type="password" [(ngModel)]="passwordVerification" name="passwordVerification">
-      <label for="signup-email">Email Address</label>
-      <input id="signup-email" type="text" [(ngModel)]="email" name="email">
-      <label for="signup-first-name">First Name</label>
-      <input id="signup-first-name" type="text" [(ngModel)]="firstName" name="first-name">
-      <label for="signup-last-name">Last Name</label>
-      <input id="signup-last-name" type="text" [(ngModel)]="lastName" name="last-name">
-      <button class="btn btn-primary" (click)="signup()" [disabled]="!checkInputs()">Signup</button>
-    </div> 
-  </form>
+  <div class="form-group">
+    <label for="signup-username">Username</label>
+    <input id="signup-username" type="text" [(ngModel)]="username" name="username">
+  </div>
+  <div class="form-group">
+    <label for="signup-password">Password</label>
+    <input id="signup-password" type="password" [(ngModel)]="password" name="password">
+  </div>
+  <label for="signup-password-verify">Re-enter Password</label>
+  <input id="signup-password-verify" type="password" [(ngModel)]="passwordVerification" name="passwordVerification">
+  <div class="form-group">
+    <label for="signup-email">Email Address</label>
+    <input id="signup-email" type="text" [(ngModel)]="email" name="email">
+  </div>
+  <div class="form-group">
+    <label for="signup-first-name">First Name</label>
+    <input id="signup-first-name" type="text" [(ngModel)]="firstName" name="first-name">
+  </div>
+  <div class="form-group">
+    <label for="signup-last-name">Last Name</label>
+    <input id="signup-last-name" type="text" [(ngModel)]="lastName" name="last-name">
+  </div>
+  <button class="btn btn-primary" (click)="signup()" [disabled]="!checkInputs()">Signup</button>
+</form>
