--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,20 +1,24 @@
-<h2>{{projectName}}</h2>
-<p>{{projectDescription}}</p>
-<div id="invitation-block">
-    <h4 class='problem' *ngIf="invitationFailed">Invitation failed</h4>
-    <label for="email">Invite User</label>
-    <input id="email" type="text" placeholder="Enter invitee's email" [(ngModel)]=invitedUserEmail>
-    <button (click)="inviteUser()">Send Invitations</button>
-</div>
-
-<button (click)="navToProjectNewStory()">New Story</button>
-
-<div class="container">
-    <div class="row">
-        <div class="col" *ngFor='let status of statusesToDisplay'>
-            <app-story-list [stories]="filteredProjectStories()[status]"></app-story-list>
+<div id="wrapper">
+    <div id="auto-block">
+        <h2>{{projectName}}</h2>
+        <p>{{projectDescription}}</p>
+        <div id="invitation-block">
+            <h4 class='problem' *ngIf="invitationFailed">Invitation failed</h4>
+            <label for="email">Invite User</label>
+            <input id="email" type="text" placeholder="Enter invitee's email" [(ngModel)]=invitedUserEmail>
+            <button (click)="inviteUser()">Send Invitations</button>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row story-holder">
+            <div id="story-maker" >
+                <button (click)="navToProjectNewStory()">New Story</button>
+                <router-outlet></router-outlet>
+            </div>
+            <div class="col status-column" *ngFor='let status of statusesToDisplay'>
+                <h2 class="status-title">{{status}}</h2>
+                <app-story-list [stories]="filteredProjectStories()[status]"></app-story-list>
+            </div>
         </div>
     </div>
 </div>
-
-<router-outlet></router-outlet>
