Added modal to ProjectComponent for Router Outlet.
Used for creating new story.

--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -7,7 +7,7 @@
     <button (click)="inviteUser()">Send Invitations</button>
 </div>
 
-<button (click)="navToProjectNewStory()">New Story</button>
+<button class="btn btn btn-light" (click)="openNewStory(content)">New Story</button>
 
 <div class="container">
     <div class="row">
@@ -17,4 +17,16 @@
     </div>
 </div>
 
-<router-outlet></router-outlet>
+<ng-template #content let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title" id="modal-basic-title">{{modalTitle}}</h4>
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <router-outlet></router-outlet>
+    </div>
+    <div class="modal-footer">
+    </div>
+</ng-template>
