--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar">
     <div class="navbar-header">
       <a class="navbar-brand">Yamcha's Dojo</a>
     </div>
@@ -10,20 +10,17 @@
     </ul>
 </nav>
 
-<div class="container">
-  <div class="row">
-    <div class="col-3 col-md-2">
-      <ul class="sidebar">
-        <li class="sidebar-header">Active Projects</li>
-        <ul class="sidebar-list-wrapper">
-          <li class="sidebar-item" *ngFor="let item of projects()" (click)="navToProject(item.projectID)">
-            {{item.projectName}}
-          </li>
-        </ul>
-      </ul>
-    </div>
-    <div class="col-9 col-md-4 project-view">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
+
+<div class="col-3 col-md-2">
+  <ul class="sidebar">
+    <li class="sidebar-header">Active Projects</li>
+    <ul class="sidebar-list-wrapper">
+      <li class="sidebar-item" *ngFor="let item of projects()" (click)="navToProject(item.projectID)">
+        {{item.projectName}}
+      </li>
+    </ul>
+  </ul>
+</div>
+<div class="project-view">
+  <router-outlet></router-outlet>
 </div>
