--- a/src/app/components/signup-login/signup-login.component.html
+++ b/src/app/components/signup-login/signup-login.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-12">
+    <div class="user-form">
       <app-login></app-login>
     </div>
-    <div class="col-md-6 col-12">
+    <div class="user-form">
       <app-signup></app-signup>
     </div>
   </div>
