--- a/src/app/components/story-card/story-card.component.html
+++ b/src/app/components/story-card/story-card.component.html
@@ -1,5 +1,5 @@
 <div class="story-card">
-  <p>{{story.storyName}}</p>
-  <p>{{story.description}}</p>
+  <p id="story-name">{{story.storyName}}</p>
+  <p id="story-description">{{story.description}}</p>
 </div>
   
