--- a/src/app/components/project/project.component.css
+++ b/src/app/components/project/project.component.css
@@ -1,6 +1,8 @@
 #wrapper {
     display: flex;
     flex-direction: column;
+    max-width: 60%;
+    margin: 0 20% 0;
 }
 
 #auto-block {
@@ -17,7 +19,7 @@
     background: teal;
     padding: 5px;
     /* border: 2px solid gold; */
-    margin: 2px;
+    margin: 5px;
     border-radius: 5px;
 }
 
@@ -25,7 +27,7 @@
     display: flex;
     flex-direction: row;
     background: darkgreen;
-    padding: 5px;
+    padding: 10px;
     /* border: 5px solid gold; */
     min-width: 95%;
     border-radius: 5px;
