Process Invitations Completed
No bugs

--- a/src/app/components/view-invitations/view-invitations.component.html
+++ b/src/app/components/view-invitations/view-invitations.component.html
@@ -4,7 +4,7 @@
       <div>
         <ul>
           <li>
-            {{invitation.projectID}}
+            {{invitation.project.projectID}}
           </li>
           <li>
             <button class="AcceptButton" (click)="processInvitation(i, true)">Accept</button>
