Update story status via drag and drop
Implemented drag and drop functionality to ProjectComponent
in conjunction with StoryListComponents.

Stories can be dragged and dropped across components.

Story ordering in a list currently has no semantic meaning.

--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -12,7 +12,9 @@
 <div class="container">
     <div class="row">
         <div class="col" *ngFor='let status of statusesToDisplay'>
-            <app-story-list [stories]="filteredProjectStories()[status]"></app-story-list>
+            <app-story-list [stories]="filteredProjectStories()[status]"
+                [status]="status"
+                [dropLists]="statusesToDisplay"></app-story-list>
         </div>
     </div>
 </div>
