Minor modifications to CSS/layout
In ProjectComponent HTML, moved "New Story" button outside of
the primary board space.

Increased min-height property value in CSS file.
Adjusted tab formatting in CSS file.

--- a/src/app/components/story-list/story-list.component.css
+++ b/src/app/components/story-list/story-list.component.css
@@ -1,12 +1,12 @@
 .story-list{
     border: 3px, solid;
-    min-height: 10%;
+    min-height: 25vh;
 }
   
-  .story-card:last-child {
-    border: none;
-  }
+.story-card:last-child {
+  border: none;
+}
 
-  .cdk-drag-placeholder {
-    visibility: hidden;
-  }
+.cdk-drag-placeholder {
+  visibility: hidden;
+}
