--- a/src/app/components/new-project/new-project.component.html
+++ b/src/app/components/new-project/new-project.component.html
@@ -1,3 +1,4 @@
+<!-- Form used to retrieve the necessary data for project creation -->
 <div class="input-form">
   <h2 *ngIf="creationFailure" class="error-message">Project creation failed</h2>
   <label for="projectName">Project Name</label>
