--- a/src/app/components/signup-login/signup-login.component.html
+++ b/src/app/components/signup-login/signup-login.component.html
@@ -1,3 +1,4 @@
+<!-- Simply displays both login and signup components for easy access. -->
 <div class="container">
   <div class="row">
     <div class="user-form">
