--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,5 +1,7 @@
 <h2>Signup</h2>
 
+<!-- Form holding the fields necessary for creating a new user. Submit button doesn't work unless the data
+      is valid -->
 <form>
   <div class="form-group">
     <label for="signup-username">Username</label>
