--- a/src/app/components/story-list/story-list.component.html
+++ b/src/app/components/story-list/story-list.component.html
@@ -1,3 +1,5 @@
+<!-- List of stories, displays the stories with the corresponding status.
+      serves as a drop area for stories in other lists -->
 <div class="story-list" cdkDropList
     id="{{status}}" 
     [cdkDropListData]="stories"
