--- a/src/app/components/create-story/create-story.component.html
+++ b/src/app/components/create-story/create-story.component.html
@@ -1,3 +1,4 @@
+<!-- Describes the form to be used in the story creation modal -->
 <form>
   <label for="storyName">Story Name</label>
   <input type="text" id="storyName" name="storyName" [(ngModel)]="storyName">
