--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <h2>Login</h2>
 
-<form>
+<form class="data-form">
   <div class="form-group">
     <label for="login-username">Username</label>
     <input id="login-username" type="text" [(ngModel)]="username" name="username">
