--- a/src/app/components/view-invitations/view-invitations.component.html
+++ b/src/app/components/view-invitations/view-invitations.component.html
@@ -1,17 +1,11 @@
-<div>
-  <ol>
-    <li *ngFor="let invitation of invitations; let i = index">
-      <div>
-        <ul>
-          <li>
-            {{invitation.project.projectID}}
-          </li>
-          <li>
-            <button class="AcceptButton" (click)="processInvitation(i, true)">Accept</button>
-            <button class="DeclineButton" (click)="processInvitation(i, false)">Decline</button>
-          </li>
-        </ul>
+<div class="invite-wrapper">
+      <div *ngFor="let invitation of invitations; let i = index" class="invite">   
+          <div>
+            {{invitation.project.projectName}}
+          </div>
+          <div>
+            <button id="AcceptButton" (click)="processInvitation(i, true)">Accept</button>
+            <button id="DeclineButton" (click)="processInvitation(i, false)">Decline</button>
+          </div>
       </div>
-    </li>
-  </ol>
 </div>
