--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -9,6 +9,11 @@
     list-style-type: none;
 }
 
+.sidebar-item:hover {
+    background: #662222;
+    color: gold;
+}
+
 nav {
     background: gold;
     display: flex;
