--- a/src/app/components/signup-login/signup-login.component.html
+++ b/src/app/components/signup-login/signup-login.component.html
@@ -1,10 +1,15 @@
 <div class="container">
+    <nav class="navbar">
+      <div class="navbar-header">
+        <a class="navbar-brand">ScrumDojo</a>
+      </div>
+    </nav>
   <div class="row">
-    <div class="user-form">
-      <app-login></app-login>
+    <div>
+      <app-login class="user-form"></app-login>
     </div>
-    <div class="user-form">
-      <app-signup></app-signup>
+    <div>
+      <app-signup class="user-form"></app-signup>
     </div>
   </div>
 </div>
