--- a/src/app/components/user-projects/user-projects.component.html
+++ b/src/app/components/user-projects/user-projects.component.html
@@ -1,3 +1,8 @@
-<ul>
-  <li *ngFor="let project of getProjects()">{{project.projectName}}</li>
-</ul>
+<div class="project-display">
+    <app-project-card class="project-card" *ngFor="let project of projects" [project]="project"></app-project-card>
+  <!-- <ul>
+    <li class="sidebar-item" *ngFor="let item of projects()" (click)="navToProject(item.projectID)">
+        {{item.projectName}}
+      </li>
+</ul> -->
+</div>
