still need to format story modal

--- a/src/app/components/new-project/new-project.component.html
+++ b/src/app/components/new-project/new-project.component.html
@@ -4,5 +4,5 @@
   <input id="projectName" type="text" [(ngModel)]="projectName">
   <label for="description">Description</label>
   <input id="description" type="text" [(ngModel)]="description">
-  <button (click)="newProject()">Create!</button>
+  <button (click)="newProject()">Create</button>
 </div>
