--- a/src/app/components/story-card/story-card.component.css
+++ b/src/app/components/story-card/story-card.component.css
@@ -1,6 +1,6 @@
 .story-card{
     padding: 3px;
-    background-color: hsl(180, 100%, 33%);
+    background-color: teal;
     margin: 4px;
     border-radius: 5px;
     box-shadow: 2px;
