--- a/src/app/components/project/project.component.css
+++ b/src/app/components/project/project.component.css
@@ -2,21 +2,36 @@
     display: flex;
     flex-direction: column;
     max-width: 60%;
-    margin: 0 20% 0;
+    margin: 10px 20% 0;
+    background: #00aaaa;
+    padding: 10px;
+
+}
+
+.project-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 #auto-block {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background: teal;
+    /* background: teal; */
     color: white;
+}
+
+#creation-block {
+    display: flex;
+    flex-direction: row;
 }
 
 .status-column {
     display: flex;
     flex-direction: column;
-    background: teal;
+    background: #00aaaa;
     padding: 5px;
     /* border: 2px solid gold; */
     margin: 5px;
@@ -26,7 +41,7 @@
 .story-holder {
     display: flex;
     flex-direction: row;
-    background: darkgreen;
+    background: teal;
     padding: 10px;
     /* border: 5px solid gold; */
     min-width: 95%;
@@ -36,4 +51,9 @@
 
 .status-title {
     text-align: center;
+}
+
+ng-template {
+    height: 150px;
+    width: 200px;
 }
