--- a/src/app/components/create-story/create-story.component.html
+++ b/src/app/components/create-story/create-story.component.html
@@ -1,9 +1,9 @@
 <form>
   <label for="storyName">Story Name</label>
   <input type="text" id="storyName" name="storyName" [(ngModel)]="storyName">
-  <!-- <label for="storyPoints">StoryPoints</label>
+  <label for="storyPoints">StoryPoints</label>
   <input type="number" id="storyPoints" name="storyPoints" [(ngModel)]="storyPoints">
   <label for="storyDescription">Description</label>
-  <textarea name="storyDescription" id="storyDescription" [(ngModel)]="storyDescription"></textarea> -->
+  <textarea name="storyDescription" id="storyDescription" [(ngModel)]="storyDescription"></textarea>
   <button (click)="addNewStory()">Submit</button>
 </form>
