--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,7 +1,6 @@
 <nav class="navbar">
     <div class="navbar-header">
-      <a class="navbar-brand">ScrumDojo</a>
-      <h2>{{user.firstName}} {{user.lastName}}</h2>
+      <a class="navbar-brand">Yamcha's Dojo</a>
     </div>
     <ul id="nav-options" class="nav navbar-nav">
       <li class="nav-bar-option" routerLink="/main/user-projects">View Projects</li>
@@ -12,16 +11,16 @@
 </nav>
 
 
-<!-- <div class="col-3 col-md-2">
+<div class="col-3 col-md-2">
   <ul class="sidebar">
     <li class="sidebar-header">Active Projects</li>
     <ul class="sidebar-list-wrapper">
-      <li class="sidebar-item" *ngFor="let item of projects" (click)="navToProject(item.projectID)">
+      <li class="sidebar-item" *ngFor="let item of projects()" (click)="navToProject(item.projectID)">
         {{item.projectName}}
       </li>
     </ul>
   </ul>
-</div> -->
+</div>
 <div class="project-view">
   <router-outlet></router-outlet>
 </div>
