--- a/src/app/components/signup-login/signup-login.component.css
+++ b/src/app/components/signup-login/signup-login.component.css
@@ -1,6 +1,6 @@
 .user-form{
     background: #00aaaa;
-    /* border: 10px solid darkgreen; */
+    border: 10px solid darkgreen;
     color: white;
     border-radius: 10px;
     margin: 20px;
@@ -13,21 +13,8 @@
 }
 
 .row {
-    /* max-width: 100%; */
-    margin: 0 10% 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-nav {
-    background: gold;
+    max-width: 100%;
+    margin: 10%;
     display: flex;
     flex-direction: row;
 }
-
-.container {
-    display: flex;
-    flex-direction: column;
-}
-
