--- a/src/app/components/signup-login/signup-login.component.html
+++ b/src/app/components/signup-login/signup-login.component.html
@@ -1,15 +1,10 @@
 <div class="container">
-    <nav class="navbar">
-      <div class="navbar-header">
-        <a class="navbar-brand">ScrumDojo</a>
-      </div>
-    </nav>
   <div class="row">
-    <div>
-      <app-login class="user-form"></app-login>
+    <div class="user-form">
+      <app-login></app-login>
     </div>
-    <div>
-      <app-signup class="user-form"></app-signup>
+    <div class="user-form">
+      <app-signup></app-signup>
     </div>
   </div>
 </div>
