--- a/src/app/components/view-invitations/view-invitations.component.html
+++ b/src/app/components/view-invitations/view-invitations.component.html
@@ -1,11 +1,12 @@
+<!-- List of procedurally generated invitations -->
 <div class="invite-wrapper">
-      <div *ngFor="let invitation of invitations; let i = index" class="invite">   
-          <div>
-            {{invitation.project.projectName}}
+    <div *ngFor="let invitation of invitations; let i = index" class="invite" >
+       <h3>
+          {{invitation.project.projectName}}
+       </h3>         
+          <div class="button-stack">
+            <button class="AcceptButton btn btn-success" (click)="processInvitation(i, true)">Accept</button>
+            <button class="DeclineButton btn btn-danger" (click)="processInvitation(i, false)">Decline</button>
           </div>
-          <div>
-            <button id="AcceptButton" (click)="processInvitation(i, true)">Accept</button>
-            <button id="DeclineButton" (click)="processInvitation(i, false)">Decline</button>
-          </div>
-      </div>
+    </div>
 </div>
