--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,9 @@
 <h2>Login</h2>
 
+<div *ngIf="loginFailed" class="alert alert-danger" role="alert">
+  Login Failed
+</div>
+
 <form class="data-form">
   <div class="form-group">
     <label for="login-username">Username</label>
