--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -2,14 +2,15 @@
     <div id="auto-block">
         <h2>{{projectName}}</h2>
         <p>{{projectDescription}}</p>
-        <div id="invitation-block">
+        <form #inviteForm="ngForm" id="invitation-block">
             <h4 class='problem' *ngIf="invitationFailed">Invitation failed</h4>
             <!-- <label for="email">Invite User</label> -->
             <input id="email" type="text" placeholder="Enter invitee's email" [(ngModel)]=invitedUserEmail>
-            <button (click)="inviteUser()">Send Invitation</button>
-        </div>
+            <button (click)="inviteUser(); inviteForm.reset()">Send Invitation</button>
+        </form>
         <div id="story-maker">
-            <button (click)="openNewStory(content)">New Story</button>
+            <app-create-story></app-create-story>
+            <!-- <button (click)="openNewStory(content)">New Story</button> -->
         </div>
     </div>
 
@@ -24,7 +25,7 @@
     </div>
 </div>
 
-<div class="story-maker">
+<!-- <div class="story-maker">
     <ng-template #content let-modal>
 
         <div class="modal-header">
@@ -41,4 +42,4 @@
 
 
     </ng-template>
-</div>
+</div> -->
