--- a/src/app/components/create-story/create-story.component.html
+++ b/src/app/components/create-story/create-story.component.html
@@ -1,10 +1,10 @@
 <!-- Describes the form to be used in the story creation modal -->
 <form>
   <!-- <label for="storyName">Story Name</label> -->
-  <input type="text" id="storyName" name="storyName" [(ngModel)]="storyName">
+  <input type="text" id="storyName" name="storyName" placeholder="User wants to..." [(ngModel)]="storyName">
   <!-- <label for="storyPoints">StoryPoints</label>
   <input type="number" id="storyPoints" name="storyPoints" [(ngModel)]="storyPoints">
   <label for="storyDescription">Description</label>
   <textarea name="storyDescription" id="storyDescription" [(ngModel)]="storyDescription"></textarea> -->
-  <button (click)="addNewStory()">Add Story</button>
+  <button (click)="addNewStory()" [disabled]="!storyName">Add Story</button>
 </form>
