--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -3,9 +3,9 @@
         <h2>{{projectName}}</h2>
         <p>{{projectDescription}}</p>
         <form #inviteForm="ngForm" id="invitation-block">
-            <h4 class='problem' *ngIf="invitationFailed">Invitation failed</h4>
+            <div *ngIf="invitationFailed" class='alert alert-danger' role="alert">Invitation failed</div>
             <!-- <label for="email">Invite User</label> -->
-            <input id="email" type="text" placeholder="Enter invitee's email" [(ngModel)]=invitedUserEmail>
+            <input id="email" type="text" placeholder="Enter invitee's email" [(ngModel)]="invitedUserEmail">
             <button (click)="inviteUser(); inviteForm.reset()">Send Invitation</button>
         </form>
         <div id="story-maker">
