Minor Tweaks to look nice

--- a/src/app/components/create-story/create-story.component.css
+++ b/src/app/components/create-story/create-story.component.css
@@ -1,9 +1,11 @@
 form {
     display: flex;
     flex-direction: column;
+    margin-right: 40px;
 }
 
 button {
     align-self: flex-end;
     margin: 2px;
+    width: 200px;
 }
