--- a/src/app/components/project/project.component.css
+++ b/src/app/components/project/project.component.css
@@ -1,10 +1,11 @@
 #wrapper {
     display: flex;
     flex-direction: column;
-    max-width: 60%;
-    margin: 10px 20% 0;
+    width: 90%;
+    margin: 10px 5% 0;
     background: #00aaaa;
     padding: 10px;
+    border-radius: 10px;
 
 }
 
@@ -29,8 +30,25 @@ button {
     /* background: teal; */
     color: white;
     align-items: center;
-    padding: 5px;
-    
+    padding: 10px;
+}
+
+#h2-project-name {
+    margin-left: 40px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+p {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+button {
+    width: 200px;
 }
 
 #invitation-block {
@@ -73,3 +91,8 @@ button {
     height: 200px;
     width: 300px;
 }
+
+/*.container {
+    margin: 0px, 0px, 0px, 0px;
+    padding: 0px;
+}*/
